    not used any more.
  * Update watch file.
  * debian/patches/02_dont_export_private_symbols.patch
    - Don't export private symbols in the libraries.
  * debian/patches/99_autoreconf.patch
    - Update the autotools files as the previous patch also touches the build
      system.
  * Add symbols files for libpolkit-{agent,backend,gobject}-1 for improved
    shlibs dependencies.

 -- Michael Biebl <biebl@debian.org>  Sun, 27 Sep 2009 01:41:32 +0200

policykit (0.9-4) unstable; urgency=low

  * Add support for /var/run being a tmpfs. (Closes: #532101)
    - Create /var/run/PolicyKit dynamically on boot by using an init script.
      Original patch by Martin Pitt, thanks. Updated patch to only run the
      init script in runlevel S at priority 75.
    - Do no longer ship /var/run/PolicyKit in the package itself.
  * debian/control
    - Bump Standards-Version to 3.8.1.
  * debian/patches/04_entry_leak.patch
    - Plug a memory leak. Patch pulled from Fedora.
  * debian/patches/05_manpage_typo_fix.patch
    - Fix a small typo in the polkit-auth man page. (Closes: #523565)
  * debian/patches/06_no_inotify_or_path_max.patch
    - Add support for systems which don't support inotify (like hurd) and
      don't use PATH_MAX unconditionally, instead use dynamically growing
      buffers. (Closes: #521756)
      Patch by Samuel Thibault, thanks.

 -- Michael Biebl <biebl@debian.org>  Thu, 18 Jun 2009 09:55:34 +0200

policykit (0.9-3) unstable; urgency=low

  * Switch patch management system to quilt.
  * debian/control
    - Wrap Build-Depends.
    - Demote Recommends: policykit-gnome to Suggests. (Closes: #513758)
    - Bump Build-Depends on debhelper to (>= 7).
  * debian/compat
    - Bump debhelper compat level to 7.
  * debian/rules
    - Include debhelper.mk before any other files as recommended by the cdbs
      documentation.
  * debian/patches/03_consolekit0.3-api.patch
    - Try both the ConsoleKit 0.3 and the older 0.2 API, to work with either.